Update SonarQube error